Docker configuration fixed. Docker completed